// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create button no props renders empty when no providers given 1`] = `<CreateButton />`;

exports[`create button with props renders button dropdown menu when two providers given 1`] = `
<CreateButton
  dashboardProviders={
    Array [
      Object {
        "appId": "test",
        "createLinkText": "test2",
        "createSortText": "test2",
        "createUrl": "test2",
        "editUrlPathFn": [Function],
        "savedObjectsName": "test2",
        "savedObjectsType": "test2",
        "viewUrlPathFn": [Function],
      },
      Object {
        "appId": "test",
        "createLinkText": "test1",
        "createSortText": "test1",
        "createUrl": "test1",
        "editUrlPathFn": [Function],
        "savedObjectsName": "test1",
        "savedObjectsType": "test1",
        "viewUrlPathFn": [Function],
      },
    ]
  }
>
  <EuiFlexItem
    grow={false}
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <EuiPopover
        anchorPosition="downRight"
        button={
          <EuiSmallButton
            data-test-subj="createMenuDropdown"
            fill={true}
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Create"
              id="dashboard.listing.createButtonText"
            />
          </EuiSmallButton>
        }
        closePopover={[Function]}
        display="inlineBlock"
        hasArrow={true}
        id="createMenuPopover"
        isOpen={false}
        ownFocus={true}
        panelPaddingSize="none"
      >
        <div
          className="euiPopover euiPopover--anchorDownRight"
          id="createMenuPopover"
        >
          <div
            className="euiPopover__anchor"
          >
            <EuiSmallButton
              data-test-subj="createMenuDropdown"
              fill={true}
              iconSide="right"
              iconType="arrowDown"
              onClick={[Function]}
            >
              <EuiButton
                data-test-subj="createMenuDropdown"
                fill={true}
                iconSide="right"
                iconType="arrowDown"
                onClick={[Function]}
                size="s"
              >
                <EuiButtonDisplay
                  baseClassName="euiButton"
                  data-test-subj="createMenuDropdown"
                  disabled={false}
                  element="button"
                  fill={true}
                  iconSide="right"
                  iconType="arrowDown"
                  isDisabled={false}
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <button
                    className="euiButton euiButton--primary euiButton--small euiButton--fill"
                    data-test-subj="createMenuDropdown"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "minWidth": undefined,
                      }
                    }
                    type="button"
                  >
                    <EuiButtonContent
                      className="euiButton__content"
                      iconGap="m"
                      iconSide="right"
                      iconType="arrowDown"
                      textProps={
                        Object {
                          "className": "euiButton__text",
                        }
                      }
                    >
                      <span
                        className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                      >
                        <EuiIcon
                          className="euiButtonContent__icon"
                          color="inherit"
                          size="m"
                          type="arrowDown"
                        >
                          <span
                            className="euiButtonContent__icon"
                            color="inherit"
                            data-euiicon-type="arrowDown"
                            size="m"
                          />
                        </EuiIcon>
                        <span
                          className="euiButton__text"
                        >
                          <FormattedMessage
                            defaultMessage="Create"
                            id="dashboard.listing.createButtonText"
                          >
                            Create
                          </FormattedMessage>
                        </span>
                      </span>
                    </EuiButtonContent>
                  </button>
                </EuiButtonDisplay>
              </EuiButton>
            </EuiSmallButton>
          </div>
        </div>
      </EuiPopover>
    </div>
  </EuiFlexItem>
</CreateButton>
`;

exports[`create button with props renders single button when one provider given 1`] = `
<CreateButton
  dashboardProviders={
    Array [
      Object {
        "appId": "test",
        "createLinkText": "TestModule",
        "createSortText": "TestModule",
        "createUrl": "createUrl",
        "editUrlPathFn": [Function],
        "savedObjectsName": "Test",
        "savedObjectsType": "test",
        "viewUrlPathFn": [Function],
      },
    ]
  }
>
  <EuiFlexItem
    grow={false}
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <EuiSmallButton
        data-test-subj="newItemButton"
        fill={true}
        href="createUrl"
        iconType="plus"
      >
        <EuiButton
          data-test-subj="newItemButton"
          fill={true}
          href="createUrl"
          iconType="plus"
          size="s"
        >
          <EuiButtonDisplay
            baseClassName="euiButton"
            data-test-subj="newItemButton"
            element="a"
            fill={true}
            href="createUrl"
            iconType="plus"
            isDisabled={false}
            rel="noreferrer"
            size="s"
          >
            <a
              className="euiButton euiButton--primary euiButton--small euiButton--fill"
              data-test-subj="newItemButton"
              disabled={false}
              href="createUrl"
              rel="noreferrer"
              style={
                Object {
                  "minWidth": undefined,
                }
              }
            >
              <EuiButtonContent
                className="euiButton__content"
                iconGap="m"
                iconSide="left"
                iconType="plus"
                textProps={
                  Object {
                    "className": "euiButton__text",
                  }
                }
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <EuiIcon
                    className="euiButtonContent__icon"
                    color="inherit"
                    size="m"
                    type="plus"
                  >
                    <span
                      className="euiButtonContent__icon"
                      color="inherit"
                      data-euiicon-type="plus"
                      size="m"
                    />
                  </EuiIcon>
                  <span
                    className="euiButton__text"
                  >
                    <FormattedMessage
                      defaultMessage="Create"
                      id="dashboard.listing.createButtonText"
                    >
                      Create
                    </FormattedMessage>
                     
                    TestModule
                  </span>
                </span>
              </EuiButtonContent>
            </a>
          </EuiButtonDisplay>
        </EuiButton>
      </EuiSmallButton>
    </div>
  </EuiFlexItem>
</CreateButton>
`;
